Stop overflowing screen

--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ html, body {
     margin-bottom: 20px;
     font-size:40px;
     text-align: end;
+    flex: 0;
+    height: 50px;
+    width: 240px;
     /* border: 2px solid gray; */
 }
 
